salesforce/force-app/main/default/objects/Opportunity/fields/Experimentation_Tag__c.field-meta.xml
<CustomField>
    <fullName>Experimentation_Tag__c</fullName>
    <description>The experiments this opportunity has been involved in.</description>
    <label>Experimentation Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Experimentation_Tag</valueSetName>
    </valueSet>
</CustomField>