salesforce/force-app/main/default/objects/Opportunity/fields/External_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Agency__c</fullName>
    <description>The external agency of this opportunity.</description>
    <label>External Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Agency_List</valueSetName>
    </valueSet>
</CustomField>