salesforce/force-app/main/default/objects/Opportunity/fields/FA_CRD__c.field-meta.xml
<CustomField>
    <fullName>FA_CRD__c</fullName>
    <description>The CRD # of the advsior.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the CRD for the Financial Advisor, not the firm. FINRA is responsible for the Central Registration Depository (CRD®) program, which supports the licensing and registration filing requirements of the U.S. securities industry and its regulators.</inlineHelpText>
    <label>FA CRD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>