salesforce/force-app/main/default/objects/Opportunity/fields/Final_Comp_UW_ARR__c.field-meta.xml
<CustomField>
    <fullName>Final_Comp_UW_ARR__c</fullName>
    <description>The Underwritten ARR adjusted by the Margin Adjustment for compensation purposes.</description>
    <formula>IF(OR(ISBLANK(Underwritten_ARR__c), ISBLANK(Margin_Adjustment__c)), null, Underwritten_ARR__c * (Margin_Adjustment__c))</formula>
    <inlineHelpText>The Underwritten ARR adjusted by the Margin Adjustment for compensation purposes.</inlineHelpText>
    <label>Final Comp UW ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>