salesforce/force-app/main/default/objects/Opportunity/fields/Final_Compensation_Margin__c.field-meta.xml
<CustomField>
    <fullName>Final_Compensation_Margin__c</fullName>
    <description>The final calculated margin on the deal as used for compensation purposes.</description>
    <label>Final Compensation Margin</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>