salesforce/force-app/main/default/objects/Opportunity/fields/Final_Source__c.field-meta.xml
<CustomField>
    <fullName>Final_Source__c</fullName>
    <label>Final Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Attribution_Sources</valueSetName>
    </valueSet>
</CustomField>