salesforce/force-app/main/default/objects/Opportunity/fields/Finance_View__c.field-meta.xml
<CustomField>
    <fullName>Finance_View__c</fullName>
    <label>Finance View Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Finance_View_Attribution</valueSetName>
    </valueSet>
</CustomField>