salesforce/force-app/main/default/objects/Opportunity/fields/FINRA__c.field-meta.xml
<CustomField>
    <fullName>FINRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FINRA</label>
    <type>Checkbox</type>
</CustomField>