salesforce/force-app/main/default/objects/Opportunity/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <description>The name of the Firm the Prospect is currently at.</description>
    <inlineHelpText>The name of the Firm the Prospect is currently at.</inlineHelpText>
    <label>Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>