salesforce/force-app/main/default/objects/Opportunity/fields/Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type__c</fullName>
    <description>The firm type which the Prospect or Opportunity is currently at.</description>
    <label>Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Firm_Type</valueSetName>
    </valueSet>
</CustomField>