salesforce/force-app/main/default/objects/Opportunity/fields/Firm_Type_old__c.field-meta.xml
<CustomField>
    <fullName>Firm_Type_old__c</fullName>
    <description>The firm type the prospect is currently at.</description>
    <label>Firm Type (deprecating)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
            </value>
            <value>
                <fullName>RIA</fullName>
            </value>
            <value>
                <fullName>Self-Owned RIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>