salesforce/force-app/main/default/objects/Opportunity/fields/Firm_Website__c.field-meta.xml
<CustomField>
    <fullName>Firm_Website__c</fullName>
    <description>The website of the firm the Prospect is currently at.</description>
    <label>Firm Website</label>
    <type>Url</type>
</CustomField>