salesforce/force-app/main/default/objects/Opportunity/fields/Forgivable_Loan__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive a forgivable loan or signing bonus?</description>
    <inlineHelpText>Does the advisor receive a forgivable loan or signing bonus?</inlineHelpText>
    <label>Forgivable Loan?</label>
    <type>Checkbox</type>
</CustomField>