salesforce/force-app/main/default/objects/Opportunity/fields/Forgivable_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Amount__c</fullName>
    <description>Total primary forgivable loan amount.</description>
    <inlineHelpText>Total primary forgivable loan amount.</inlineHelpText>
    <label>Forgivable Loan Amount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>