salesforce/force-app/main/default/objects/Opportunity/fields/Forgivable_Loan_Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Duration_Years__c</fullName>
    <description>Number of years over which the loan is forgiven.</description>
    <inlineHelpText>Number of years over which the loan is forgiven.</inlineHelpText>
    <label>Forgivable Loan Duration (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>