salesforce/force-app/main/default/objects/Opportunity/fields/Forgivable_Loan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Notes__c</fullName>
    <description>Details about multi-tranche loans, repayment triggers, conditional dates, etc.</description>
    <inlineHelpText>Details about multi-tranche loans, repayment triggers, conditional dates, etc.</inlineHelpText>
    <label>Forgivable Loan Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>