salesforce/force-app/main/default/objects/Opportunity/fields/Full_Deal_Terms_JSON__c.field-meta.xml
<CustomField>
    <fullName>Full_Deal_Terms_JSON__c</fullName>
    <description>Complete structured JSON of all extracted deal terms. Used by the payout calculation engine.</description>
    <inlineHelpText>Complete structured JSON of all extracted deal terms. Used by the payout calculation engine.</inlineHelpText>
    <label>Full Deal Terms JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>