salesforce/force-app/main/default/objects/Opportunity/fields/Full_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Opportunity_ID__c</fullName>
    <description>The 18-character Salesforce ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Opportunity ID</label>
    <type>Text</type>
</CustomField>