salesforce/force-app/main/default/objects/Opportunity/fields/Grid_Type__c.field-meta.xml
<CustomField>
    <fullName>Grid_Type__c</fullName>
    <description>How the revenue share tiers are applied. Waterfall: each tier rate applies only within its ARR range. Flat: one rate for all revenue. Time-Based Then Tiered: enhanced rate for initial period, then standard tiers.</description>
    <inlineHelpText>How the revenue share tiers are applied. Values: Waterfall (each tier rate applies only within its ARR range), Flat (one rate for all revenue), Time-Based Then Tiered (enhanced rate for initial period, then standard tiers).</inlineHelpText>
    <label>Grid Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>