salesforce/force-app/main/default/objects/Opportunity/fields/Held_Intro_Call__c.field-meta.xml
<CustomField>
    <fullName>Held_Intro_Call__c</fullName>
    <formula>CASE( StageName,
&quot;Discovery&quot;, 1,
&quot;Sales Process&quot;, 1,
&quot;Negotiating&quot;, 1,
&quot;Signed&quot;, 1,
&quot;On Hold&quot;, 1,
&quot;Joined&quot;, 1,
&quot;Closed Lost&quot;, 1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Held Intro Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>