salesforce/force-app/main/default/objects/Opportunity/fields/Joined_Rolling_Window__c.field-meta.xml
<CustomField>
    <fullName>Joined_Rolling_Window__c</fullName>
    <formula>FLOOR((TODAY() -  Advisor_Join_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joined Rolling Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>