salesforce/force-app/main/default/objects/Opportunity/fields/Lead_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_List_Name__c</fullName>
    <description>The Lead List this Prospect was a part of.</description>
    <inlineHelpText>The Lead List this Prospect was a part of.</inlineHelpText>
    <label>Lead List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>