salesforce/force-app/main/default/objects/Opportunity/fields/Lead_Score_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Tier__c</fullName>
    <label>Lead Score Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>