salesforce/force-app/main/default/objects/Opportunity/fields/LinkedIn_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_URL__c</fullName>
    <description>The LinkedIn Profile of the candidate.</description>
    <label>LinkedIn Profile URL</label>
    <type>Url</type>
</CustomField>