salesforce/force-app/main/default/objects/Opportunity/fields/Manager_Deal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Deal_Notes__c</fullName>
    <description>The notes from an SGM director or chief growth officer based on a conversation with the SGM</description>
    <label>Manager Deal Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>