salesforce/force-app/main/default/objects/Opportunity/fields/Margin_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Margin_Adjustment__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Any margin adjustment to the ARR for compensation purposes</description>
    <inlineHelpText>Any margin adjustment to the ARR for compensation purposes</inlineHelpText>
    <label>Margin Adjustment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>