salesforce/force-app/main/default/objects/Opportunity/fields/Marketing_Cohort_Name__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cohort_Name__c</fullName>
    <description>The name of the marketing cohort</description>
    <inlineHelpText>The name of the marketing cohort</inlineHelpText>
    <label>Marketing Cohort Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>