salesforce/force-app/main/default/objects/Opportunity/fields/Marketing_Segment__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segment__c</fullName>
    <description>Advisor segment for paid ads targeting. Auto-populated via Hightouch from BigQuery advisor_segments table. Values: CAPTIVE_W2 (wirehouse/captive), RIA_OWNER (any ownership stake), INDEPENDENT_PLATFORM (non-owner at IBD/platform firm).</description>
    <label>Marketing Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAPTIVE_W2</fullName>
            </value>
            <value>
                <fullName>RIA_OWNER</fullName>
            </value>
            <value>
                <fullName>INDEPENDENT_PLATFORM</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>