salesforce/force-app/main/default/objects/Opportunity/fields/Non__c.field-meta.xml
<CustomField>
    <fullName>Non__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If there is a non-standard marketing offer, what is the agreed to marketing budget?</description>
    <inlineHelpText>If there is a non-standard marketing offer, what is the agreed to marketing budget?</inlineHelpText>
    <label>Marketing Budget (Annual)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>