salesforce/force-app/main/default/objects/Opportunity/fields/Non_Standard_Marketing_Offer__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Marketing_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this advisor have a non-standard marketing offer?</description>
    <label>Non-Standard Marketing Offer</label>
    <type>Checkbox</type>
</CustomField>