salesforce/force-app/main/default/objects/Opportunity/fields/of_Non_SQOs__c.field-meta.xml
<CustomField>
    <fullName>of_Non_SQOs__c</fullName>
    <formula>CASE(SQL__c,&quot;No&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Non SQOs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>