salesforce/force-app/main/default/objects/Opportunity/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <defaultValue>&quot;WFH&quot;</defaultValue>
    <description>The office address of the advisor, defaults to &quot;WFH&quot; if they are remote.</description>
    <inlineHelpText>The office address of the advisor, defaults to &quot;WFH&quot; if they are remote.</inlineHelpText>
    <label>Office Address</label>
    <type>TextArea</type>
</CustomField>