salesforce/force-app/main/default/objects/Opportunity/fields/Open_Re_Engagement_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Re_Engagement_Opps__c</fullName>
    <formula>Account.Open_Re_Engagement_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Re-Engagement Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>