salesforce/force-app/main/default/objects/Opportunity/fields/Open_Recruiting_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Recruiting_Opps__c</fullName>
    <description>Surfaces the Account-level Open Recruiting Opps rollup on Opportunity. Used in the Re-Engagement Eligible list view to exclude advisors with an active recruiting opportunity.</description>
    <formula>Account.Open_Recruiting_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of active Recruiting Opportunities (not Closed Lost or Joined) on this advisor&apos;s Account.</inlineHelpText>
    <label>Open Recruiting Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>