salesforce/force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <description>The Opportunity Owner&apos;s name as text (used for exported reporting to not have to join to a User table)</description>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>