salesforce/force-app/main/default/objects/Opportunity/fields/Original_Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Original_Closed_Lost_Details__c</fullName>
    <description>Surfaces the Account-level Original Closed Lost Details on Opportunity. Shows the details from the first Recruiting opp to close lost.</description>
    <formula>Account.Original_Closed_Lost_Details_Short__c</formula>
    <inlineHelpText>Closed Lost Details from the original (first) Recruiting opportunity for this advisor.</inlineHelpText>
    <label>Original Closed Lost Details</label>
    <type>Text</type>
</CustomField>