salesforce/force-app/main/default/objects/Opportunity/fields/Original_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Original_Closed_Lost_Reason__c</fullName>
    <description>Surfaces the Account-level Original Closed Lost Reason on Opportunity. Shows the reason from the first Recruiting opp to close lost.</description>
    <formula>Account.Original_Closed_Lost_Reason__c</formula>
    <inlineHelpText>Closed Lost Reason from the original (first) Recruiting opportunity for this advisor.</inlineHelpText>
    <label>Original Closed Lost Reason</label>
    <type>Text</type>
</CustomField>