salesforce/force-app/main/default/objects/Opportunity/fields/Other_Custodian_Display_Filter__c.field-meta.xml
<CustomField>
    <fullName>Other_Custodian_Display_Filter__c</fullName>
    <description>A field made to dynamically display the Other Custodian text field on the opportunity page because a lightning page cannot have a multi-picklist as a filter on whether or not to display another field.</description>
    <formula>INCLUDES(Previous_Custodians__c , &quot;Other (Please Specify)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Custodian Display Filter</label>
    <type>Checkbox</type>
</CustomField>