salesforce/force-app/main/default/objects/Opportunity/fields/Other_Fixed_Cost_Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Fixed_Cost_Annual_Amount__c</fullName>
    <description>Total annual amount of additional expense provisions.</description>
    <inlineHelpText>Total annual amount of additional expense provisions.</inlineHelpText>
    <label>Additional Expenses - Annual Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>