salesforce/force-app/main/default/objects/Opportunity/fields/Other_Fixed_Cost_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Fixed_Cost_Notes__c</fullName>
    <description>Details about expense provisions: discretionary budget, rent reimbursement, staff stipend, etc.</description>
    <inlineHelpText>Details about expense provisions: discretionary budget, rent reimbursement, staff stipend, etc.</inlineHelpText>
    <label>Additional Expenses Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>