salesforce/force-app/main/default/objects/Opportunity/fields/Other_Fixed_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Fixed_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive any additional expense provisions (discretionary budget, rent, staff, etc.)?</description>
    <inlineHelpText>Does the advisor receive any additional expense provisions (discretionary budget, rent, staff, etc.)?</inlineHelpText>
    <label>Additional Expenses?</label>
    <type>Checkbox</type>
</CustomField>