salesforce/force-app/main/default/objects/Opportunity/fields/Other_Previous_Custodians__c.field-meta.xml
<CustomField>
    <fullName>Other_Previous_Custodians__c</fullName>
    <description>If &apos;other&apos; is selected on previous custodians, the other previous custodians used.</description>
    <inlineHelpText>If &apos;other&apos; is selected on previous custodians, the other previous custodians used. Please insert a semicolon (;) between custodians if multiple need to be listed.</inlineHelpText>
    <label>Other Previous Custodians</label>
    <length>255</length>
    <type>Text</type>
</CustomField>