salesforce/force-app/main/default/objects/Opportunity/fields/page_source__c.field-meta.xml
<CustomField>
    <fullName>page_source__c</fullName>
    <description>Marketing Page Source</description>
    <label>Page Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>