salesforce/force-app/main/default/objects/Opportunity/fields/page_url__c.field-meta.xml
<CustomField>
    <fullName>page_url__c</fullName>
    <description>Marketing Page URL</description>
    <label>Page URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>