salesforce/force-app/main/default/objects/Opportunity/fields/Personal_AUM__c.field-meta.xml
<CustomField>
    <fullName>Personal_AUM__c</fullName>
    <description>The personal AUM currently managed by the prospect.</description>
    <label>Personal AUM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>