salesforce/force-app/main/default/objects/Opportunity/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <description>The personal email of the Prospect.</description>
    <inlineHelpText>The personal email of the Prospect.</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>