salesforce/force-app/main/default/objects/Opportunity/fields/Pre_Onboarding_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Pre_Onboarding_Document_URL__c</fullName>
    <label>Pre-Onboarding Document URL</label>
    <type>Url</type>
</CustomField>