salesforce/force-app/main/default/objects/Opportunity/fields/PreOnboarding_Internal_URL__c.field-meta.xml
<CustomField>
    <fullName>PreOnboarding_Internal_URL__c</fullName>
    <description>The internal pre-onboarding sheet filled out after the pre-onboarding call. Used to provide information to the investment ops and CSA team to help smoothly transition an advisor.</description>
    <label>PreOnboarding Internal URL</label>
    <type>Url</type>
</CustomField>