salesforce/force-app/main/default/objects/Opportunity/fields/Previous_Custodians__c.field-meta.xml
<CustomField>
    <fullName>Previous_Custodians__c</fullName>
    <description>The previous custodians the advisor is using where assets may be coming from.</description>
    <inlineHelpText>The previous custodians the advisor is using where assets may be coming from.</inlineHelpText>
    <label>Previous Custodians</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Previous_Custodians</valueSetName>
    </valueSet>
</CustomField>