salesforce/force-app/main/default/objects/Opportunity/fields/Previous_Recruiting_Opportunity_CLR__c.field-meta.xml
<CustomField>
    <fullName>Previous_Recruiting_Opportunity_CLR__c</fullName>
    <description>The Previous Recruiting Opportunity&apos;s closed lost reason.</description>
    <label>Previous Recruiting Opportunity CLR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Closed_Lost_Reason</valueSetName>
    </valueSet>
</CustomField>