salesforce/force-app/main/default/objects/Opportunity/fields/Previous_Recruiting_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Recruiting_Opportunity_ID__c</fullName>
    <description>For re-engagement opportunities, the previous recruiting opportunity ID.</description>
    <label>Previous Recruiting Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>