salesforce/force-app/main/default/objects/Opportunity/fields/Previous_Recruiting_Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Recruiting_Opportunity_Owner_ID__c</fullName>
    <description>For Re-Engagement Opportunities, the previous SGM&apos;s ID who had had the recruiting opportunity.</description>
    <label>Previous Recruiting Opportunity Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>