salesforce/force-app/main/default/objects/Opportunity/fields/Previous_Recruting_Opp_CL_Details__c.field-meta.xml
<CustomField>
    <fullName>Previous_Recruting_Opp_CL_Details__c</fullName>
    <description>The previous recruiting opportunity Closed Lost Details</description>
    <label>Previous Recruting Opp CL Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>