salesforce/force-app/main/default/objects/Opportunity/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <description>The primary phone number of the opportunity. This is passed from the mobile phone #1 formatted field as there isn&apos;t mapping for mobile phone 1 to the opportunity object directly.</description>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>