salesforce/force-app/main/default/objects/Opportunity/fields/Product_Features_Committed__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_Committed__c</fullName>
    <description>Any product features the Sales team had committed to being available for the advisor upon starting at Savvy</description>
    <inlineHelpText>Please list any product features Savvy committed to being available for the advisor upon starting at Savvy (if any).</inlineHelpText>
    <label>Product Features Committed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>