salesforce/force-app/main/default/objects/Opportunity/fields/Qualification_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Call_Date__c</fullName>
    <description>The date when the qualification call with the SGM was scheduled (at the time of conversion).</description>
    <inlineHelpText>The date when the qualification call with the SGM was scheduled (at the time of conversion).</inlineHelpText>
    <label>Qualification Call Date</label>
    <type>Date</type>
</CustomField>