salesforce/force-app/main/default/objects/Opportunity/fields/Qualification_Rate__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Rate__c</fullName>
    <formula>Count_SQO__c /( Count_SQO__c + of_Non_SQOs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualification Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>