salesforce/force-app/main/default/objects/Opportunity/fields/Re_Engagement_Next_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Next_Touch_Date__c</fullName>
    <description>The target date of the next touch (scheduled or unscheduled)</description>
    <inlineHelpText>The target date of the next touch (scheduled or unscheduled)</inlineHelpText>
    <label>Re-Engagement Next Touch Date</label>
    <type>Date</type>
</CustomField>