salesforce/force-app/main/default/objects/Opportunity/fields/Re_Engagement_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Opp_Count__c</fullName>
    <description>Surfaces the Account-level Total Re-Engagement Opps count on Opportunity. Shows how many times re-engagement was attempted for this advisor.</description>
    <formula>Account.Total_Re_Engagement_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of Re-Engagement Opportunities ever created for this advisor.</inlineHelpText>
    <label># of Re-Engagement Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>