salesforce/force-app/main/default/objects/Opportunity/fields/Re_Engagement_Priority__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Priority__c</fullName>
    <description>How we should prioritize this re-engagement opportunity against others.</description>
    <label>Re-Engagement Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>