salesforce/force-app/main/default/objects/Opportunity/fields/Re_Engagement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Re_Engagement_Reason__c</fullName>
    <description>The reason for nurture (Timing, Budget, etc.) which might help us send specific content later on to the advisor to address this.</description>
    <inlineHelpText>The reason for nurture (Timing, Budget, etc.) which might help us send specific content later on to the advisor to address this.</inlineHelpText>
    <label>Re-Engagement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost Touch</fullName>
            </value>
            <value>
                <fullName>Compensation Concerns</fullName>
            </value>
            <value>
                <fullName>Timing (too early)</fullName>
            </value>
            <value>
                <fullName>Recent Transition</fullName>
            </value>
            <value>
                <fullName>Building Stronger Client Relationships</fullName>
            </value>
            <value>
                <fullName>Nervous about litigation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>